fix alignment of datepicker

--- a/src/app/dialogs/edit-dialog/edit-dialog.component.scss
+++ b/src/app/dialogs/edit-dialog/edit-dialog.component.scss
@@ -36,3 +36,7 @@
   display: flex;
   column-gap: 18px;
 }
+
+.form-group {
+  width: 80%;
+}
